# Telecastt

./: .gitignore  GEMINI.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: package-lock.json  package.json  server.js
backend/lib/: binary-protocol.js  bluetooth-controller.js  idd-controller.js  input-controller.js  rate-limiter.js  room-registry.js
backend/test/: room-registry.test.js  unit.test.js
docs/: BUG_AUDIT.md  DEMO.md  MASTER_PLAN.md  OPTIMIZATION.md  OPTIMIZATION_777.md  SECURITY_AUDIT.md  USE_CASES.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: service-worker.js
frontend/src/: App.tsx  index.css  main.tsx  registerSW.ts
frontend/src/components/: ClientView.tsx  CommandCenter.tsx  ControlDock.tsx  DisplayControls.tsx  ErrorBoundary.tsx  HostView.tsx  LandingView.tsx  MacDock.tsx  QRPanel.tsx  SpatialConfigurator.tsx  Telemetry.tsx  TelemetryOverlay.tsx  VideoStage.tsx  VideoSurface.tsx
frontend/src/hooks/: useAdaptiveQuality.ts  useBatteryAware.ts  useClipboardSync.ts  useDataChannels.ts  useDeviceOrientation.ts  useDisplayCapture.ts  useDisplayMedia.ts  useFullscreen.ts  useFullscreenLock.ts  useHostInputRelay.ts  useInputCapture.ts  useMultiCursor.ts  usePictureInPicture.ts  usePointerCapture.ts  useWakeLock.ts  useWebAuthn.ts  useWebRTC.ts
native/: CMakeLists.txt
native/src/: edid-spoofer.cpp  framebuffer-capture.cpp  input-injector.cpp  power-hooks.cpp
scripts/: Configure-VirtualDisplay.ps1  Enable-BluetoothPAN.ps1  Inject-Input.ps1  Install-VirtualMonitor.ps1  build-deterministic.ps1
(+10 files in other folders)
